--- a/webapp/magento/css/custom.css
+++ b/webapp/magento/css/custom.css
@@ -1,3 +1,21 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
 label.error {color:#FF0000;}
 .asterisk {color: #FF0000;}
 .chosen-container.chosen-container-multi, .search-field .default {width: 100% !important;}
@@ -12,8 +30,8 @@ a.disabled {cursor: not-allowed;opacity: 0.65;pointer-events: none;}
   width: 100%; 
   height: 100%; 
   background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; 
-  opacity: .30;
-  filter:Alpha(Opacity=30);
+  opacity: .80;
+  filter:Alpha(Opacity=80);
 }
 
 .divider-vertical{
@@ -25,4 +43,11 @@ a.disabled {cursor: not-allowed;opacity: 0.65;pointer-events: none;}
 /*To revert overriding of the rule caused by bootstrap css*/
 .label {
   color : #000;
+}
+.ajax-loader {
+    background: url(../img/ajax-loader.gif) no-repeat center; display: inline-block; height:16px; width: 16px;
+}
+
+.data-sync-image {
+    background: url(../img/dataSync.gif) no-repeat center; display: inline-block; height:50%; width: 50%;
 }
